--- a/src/components/pages/layout/Home.module.css
+++ b/src/components/pages/layout/Home.module.css
@@ -29,3 +29,25 @@
     align-items: center;
     justify-content: center;
 }
+.menu{
+    width: 50px;
+    height: 50px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    background-color: #149ddd;
+    color: #fff;
+    cursor: pointer;
+    font-size: 25px;
+    border-radius: 50%;
+    
+}
+@media (max-width:768px) {
+    .menu{
+    
+        display: flex;
+    }
+}
