--- a/src/components/pages/layout/Service.module.css
+++ b/src/components/pages/layout/Service.module.css
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;600&display=swap');
-*{
-    font-family: "poppins";
-}
 .container{
     width: 100%;
     max-width: 1200px;
@@ -10,13 +6,10 @@
     background-color: #ffffff;
     margin: 0 auto;
     border-bottom: 1px solid rgb(179, 176, 176);
-       
+
+    
 }
-@media (max-width:768px) {
-    .container{
-        margin-top: 90px;
-    }
-}
+
 .container h1{
         width:100px;
         color: #173b6c;
@@ -30,11 +23,11 @@
     background-color: #149ddd;
     margin-left: 20px;
 }
-.box_skills{
+.box_projects{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
+    flex-wrap: wrap;
+    
 
-    margin-top: 40px;
     
 }
