--- a/src/components/pages/layout/About.module.css
+++ b/src/components/pages/layout/About.module.css
@@ -28,7 +28,7 @@
     margin-left: 20px;
 }
 .description{
-    width: 500px;
+    max-width: 500px;
     
     
 }
@@ -36,7 +36,14 @@
     line-height: 25px;
     font-size: 19px;
     padding-top: 15px;
-    width: 100%;
+    
+}
+@media (max-width:540px) {
+    .description p{
+        padding: 0 30px;
+        
+        
+    }
 }
 .box_description{
     display: flex;
@@ -46,8 +53,16 @@
 }
 
 @media (max-width:768px) {
+    .container{
+        height: auto;
+    }
     .box_description{
         flex-direction: column;
+    }
+    .description{
+       text-align: center;
+       margin-top: 40px;
+        
     }
     
 }
