--- a/src/components/pages/layout/sidebar.module.css
+++ b/src/components/pages/layout/sidebar.module.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .container{
     width: 300px;
     height: 100vh;
@@ -13,6 +14,7 @@
     position: fixed;
     transition: .5s;
     z-index: 5;
+    
     
 }
 @media (max-width:1080px) {
@@ -47,32 +49,7 @@
     margin-top: 20px;
     font-size: 26px;
 }
-.social_liks{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 20px 30px;
-    
-}
-.social_liks div{
-    color: #fff;
-    background-color: #212431;
-    width: 35px;
-    height: 35px;
-    font-size: 18px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    transition: .3s;
 
-}
-.social_liks div:hover{
-    cursor: pointer;
-    background-color: #149ddd;
-
-}
 .box_p{
     
     position: absolute;
@@ -99,11 +76,12 @@
     position: fixed;
     top: 25px;
     right: 25px;
-    background-color: #149ddd;
-    color: #fff;
+    background-color: hsl(199, 83%, 47%);
+    color: rgb(255, 255, 255);
     cursor: pointer;
     font-size: 25px;
     border-radius: 50%;
+    border: none;
     
     
 }
@@ -112,4 +90,32 @@
     
         display: flex;
     }
+    .menu_active{
+        background-color: hsla(199, 83%, 47%, 0.637);
+        
+    }
+}
+.containerSocialLiks{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px 30px;
+    
+}
+.social_liks{
+    color: #fff;
+    background-color: #212431;
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: .3s;
+
+}
+.social_liks:hover{
+    cursor: pointer;
+    background-color: #149ddd;
 }
