--- a/src/components/pages/layout/About.module.css
+++ b/src/components/pages/layout/About.module.css
@@ -38,6 +38,26 @@
     padding-top: 15px;
     
 }
+.description button{
+    padding: 8px 25px;
+    background-color: #149ddd;
+    color: #ffffff;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 10px;
+    margin: 30px 0;
+    border: 2px solid #149ddd;
+    
+    
+}
+.description button:hover{
+    color: #149ddd;
+    background-color: #ffffff;
+    border: 2px solid #149ddd;
+    
+    
+}
 @media (max-width:540px) {
     .description p{
         padding: 0 30px;
